testfx/errors/error_tests/edge_25_special_values.fx
// 其他语言的特殊值
x := None
y := nil
z := undefined

if (x == None) {
    println("x is None")
}

flag1 := True
flag2 := False
